parser/src/snapshots/rustpython_parser__function__tests__function_kw_only_args_with_defaults.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Attributed {
            range: 0..29,
            custom: (),
            node: FunctionDef(
                StmtFunctionDef {
                    name: "f",
                    args: Arguments {
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [
                            Attributed {
                                range: 9..10,
                                custom: (),
                                node: ArgData {
                                    arg: "a",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Attributed {
                                range: 12..13,
                                custom: (),
                                node: ArgData {
                                    arg: "b",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Attributed {
                                range: 18..19,
                                custom: (),
                                node: ArgData {
                                    arg: "c",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                        ],
                        kw_defaults: [
                            Attributed {
                                range: 14..16,
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            20,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                            Attributed {
                                range: 20..22,
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            30,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                        ],
                        kwarg: None,
                        defaults: [],
                    },
                    body: [
                        Attributed {
                            range: 25..29,
                            custom: (),
                            node: Pass,
                        },
                    ],
                    decorator_list: [],
                    returns: None,
                    type_comment: None,
                },
            ),
        },
    ],
)
