parser/src/snapshots/rustpython_parser__function__tests__function_pos_and_kw_only_args_with_defaults_and_varargs.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Located {
            range: 0..42,
            custom: (),
            node: FunctionDef(
                StmtFunctionDef {
                    name: "f",
                    args: Arguments {
                        posonlyargs: [],
                        args: [
                            Located {
                                range: 6..7,
                                custom: (),
                                node: ArgData {
                                    arg: "a",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Located {
                                range: 9..10,
                                custom: (),
                                node: ArgData {
                                    arg: "b",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Located {
                                range: 12..13,
                                custom: (),
                                node: ArgData {
                                    arg: "c",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                        ],
                        vararg: Some(
                            Located {
                                range: 16..20,
                                custom: (),
                                node: ArgData {
                                    arg: "args",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                        ),
                        kwonlyargs: [
                            Located {
                                range: 22..23,
                                custom: (),
                                node: ArgData {
                                    arg: "d",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Located {
                                range: 25..26,
                                custom: (),
                                node: ArgData {
                                    arg: "e",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Located {
                                range: 31..32,
                                custom: (),
                                node: ArgData {
                                    arg: "f",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                        ],
                        kw_defaults: [
                            Located {
                                range: 27..29,
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            20,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                            Located {
                                range: 33..35,
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            30,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                        ],
                        kwarg: None,
                        defaults: [],
                    },
                    body: [
                        Located {
                            range: 38..42,
                            custom: (),
                            node: Pass,
                        },
                    ],
                    decorator_list: [],
                    returns: None,
                    type_comment: None,
                },
            ),
        },
    ],
)
