parser/src/snapshots/rustpython_parser__function__tests__function_pos_and_kw_only_args_with_defaults_and_varargs_and_kwargs.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Attributed {
            range: 0..52,
            custom: (),
            node: FunctionDef(
                StmtFunctionDef {
                    name: "f",
                    args: Arguments {
                        posonlyargs: [],
                        args: [
                            Attributed {
                                range: 6..7,
                                custom: (),
                                node: ArgData {
                                    arg: "a",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Attributed {
                                range: 9..10,
                                custom: (),
                                node: ArgData {
                                    arg: "b",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Attributed {
                                range: 12..13,
                                custom: (),
                                node: ArgData {
                                    arg: "c",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                        ],
                        vararg: Some(
                            Attributed {
                                range: 16..20,
                                custom: (),
                                node: ArgData {
                                    arg: "args",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                        ),
                        kwonlyargs: [
                            Attributed {
                                range: 22..23,
                                custom: (),
                                node: ArgData {
                                    arg: "d",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Attributed {
                                range: 25..26,
                                custom: (),
                                node: ArgData {
                                    arg: "e",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Attributed {
                                range: 31..32,
                                custom: (),
                                node: ArgData {
                                    arg: "f",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                        ],
                        kw_defaults: [
                            Attributed {
                                range: 27..29,
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            20,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                            Attributed {
                                range: 33..35,
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            30,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                        ],
                        kwarg: Some(
                            Attributed {
                                range: 39..45,
                                custom: (),
                                node: ArgData {
                                    arg: "kwargs",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                        ),
                        defaults: [],
                    },
                    body: [
                        Attributed {
                            range: 48..52,
                            custom: (),
                            node: Pass,
                        },
                    ],
                    decorator_list: [],
                    returns: None,
                    type_comment: None,
                },
            ),
        },
    ],
)
