parser/src/snapshots/rustpython_parser__function__tests__function_pos_args_with_defaults.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Located {
            location: Location {
                row: 1,
                column: 0,
            },
            end_location: Some(
                Location {
                    row: 1,
                    column: 26,
                },
            ),
            custom: (),
            node: FunctionDef(
                StmtFunctionDef {
                    name: "f",
                    args: Arguments {
                        posonlyargs: [],
                        args: [
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 6,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 7,
                                    },
                                ),
                                custom: (),
                                node: ArgData {
                                    arg: "a",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 9,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 10,
                                    },
                                ),
                                custom: (),
                                node: ArgData {
                                    arg: "b",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 15,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 16,
                                    },
                                ),
                                custom: (),
                                node: ArgData {
                                    arg: "c",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kw_defaults: [],
                        kwarg: None,
                        defaults: [
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 11,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 13,
                                    },
                                ),
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            20,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 17,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 19,
                                    },
                                ),
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            30,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                        ],
                    },
                    body: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 22,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 26,
                                },
                            ),
                            custom: (),
                            node: Pass,
                        },
                    ],
                    decorator_list: [],
                    returns: None,
                    type_comment: None,
                },
            ),
        },
    ],
)
