parser/src/snapshots/rustpython_parser__function__tests__function_pos_args_with_ranges.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..20,
                name: Identifier(
                    "f",
                ),
                args: Arguments {
                    range: 5..14,
                    posonlyargs: [],
                    args: [
                        Arg {
                            range: 6..7,
                            arg: Identifier(
                                "a",
                            ),
                            annotation: None,
                            type_comment: None,
                        },
                        Arg {
                            range: 9..10,
                            arg: Identifier(
                                "b",
                            ),
                            annotation: None,
                            type_comment: None,
                        },
                        Arg {
                            range: 12..13,
                            arg: Identifier(
                                "c",
                            ),
                            annotation: None,
                            type_comment: None,
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Pass(
                        StmtPass {
                            range: 16..20,
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        ),
    ],
)
